delete extra words

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
  
-	<h1 >     Hi , meet my ff <div class="lover" >  <a href="page1.html"> Lover . </a> </div> </h1>
+	<h1 >     Hi , meet my  <div class="lover" >  <a href="page1.html"> Lover . </a> </div> </h1>
 
 <div>
 
